# hass-unfoldedcircle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  INTEGRATION.md  LICENSE  README.md  RELEASE_WORKFLOW.md  hacs.json  pylintrc  requirements.txt  requirements_all.txt
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  setup
.github/: FUNDING.yml
.github/workflows/: build-release.yml  release.yml
config/: configuration.yaml
custom_components/unfoldedcircle/: __init__.py  binary_sensor.py  button.py  compare.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  helpers.py  hold.py  icons.json  infrared.py  light.py  manifest.json  media_player.py  number.py  remote.py  remote_client.py  repairs.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  update.py  websocket.py
custom_components/unfoldedcircle/pyUnfoldedCircleRemote/: const.py  dock.py  dock_websocket.py  remote.py  remote_websocket.py  websocket.py
custom_components/unfoldedcircle/translations/: ._fr.json  de.json  en.json  fr.json  pt.json
custom_components/unfoldedcircle/unfurled/: .gitignore  README.md  main.py  pyproject.toml
custom_components/unfoldedcircle/unfurled/.github/workflows/: ci.yml  publish.yml
custom_components/unfoldedcircle/unfurled/tests/: conftest.py  test_activity.py  test_api.py  test_dock.py  test_helpers.py  test_models.py  test_remote.py  test_websocket.py
custom_components/unfoldedcircle/unfurled/unfurled/: __init__.py  api.py  dock.py  remote.py
custom_components/unfoldedcircle/unfurled/unfurled/entities/: activity.py  ir.py  media_player.py
custom_components/unfoldedcircle/unfurled/unfurled/helpers/: discovery.py  exceptions.py  helpers.py  models.py  websocket.py
custom_components/unfoldedcircle/unfurled/unfurled/submodules/: authentication.py  base.py  integrations.py  settings.py  systems.py
scripts/: update_license_year.sh
