[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unfurled"
version = "0.1.3"
description = "Python async API for Unfolded Circle remotes and docks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Unfolded Circle API Contributors" }]
keywords = ["unfolded-circle", "remote", "home-automation", "ir", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.13.5",
    "websockets>=12.0",
    "wakeonlan>=3.0",
    "packaging>=23.0",
    "zeroconf>=0.128",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "pytest-cov>=4.0",
    "mypy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jackjpowell/unfurled"
Repository = "https://github.com/jackjpowell/unfurled"
Issues = "https://github.com/jackjpowell/unfurled/issues"
Changelog = "https://github.com/jackjpowell/unfurled/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["unfurled"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["tests/*", "pyUnfoldedCircle/*"]

[tool.pylint.main]
ignore = ["tests, README.md, test/*"]

[tool.pylint.messages_control]
disable = [
    "protected-access",   # W0212 - intentional cross-module sub-object access
    "broad-exception-caught",
] 

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "mypy>=2.0.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.12",
]
